# my-site

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
src/: configuration.rs  lib.rs  main.rs
static/blogs/: 2025-05-29.txt
static/recipes/: ppg.txt
templates/: index.html
tests/: health_check.rs
